# motor-insurance-market-simulation

./: README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: pipeline.yml  python-app.yml
pricing_model/: predict_premium.py
